# ifaddrs

./: .clang-format  CMakeLists.txt  README.md  ifaddrs.c  ifaddrs.h
lib/: CMakeLists.txt
lib/include/: ifaddrs.h
lib/src/include/: macros.h
src/: ifaddrs.c
src/include/: ifaddrs_internal.h
